syntax = "proto3";

package protobuf;

message Event {
    // Grouping a collection of payloads.
    repeated Payload payloadCollection = 1;

    enum EventType {
        SIGNUP = 0;
        FOLLOW = 1;
        SPLASH_CREATION = 2;
        IMPRESSION =3;
    }

    message Payload {
        int64 time = 1;
        EventType eventType = 2;
        // Id of the user who took the action.
        string actorId = 3;
        // Id of the user who is affected by the action...
        string subjectId = 4;
    }
}